--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
     </ul>
   </nav>
 
-  <h1>Welcome To Ironhacker's Page</h1>
+  <h1>Welcome To Joshua F. Kinslow's Page</h1>
 
   <section>
     <h2>Things I Like</h2>
     <ul>
-      <li>Fill</li>
-      <li>This</li>
-      <li>In</li>
+      <li>Programming</li>
+      <li>Gaming</li>
+      <li>Soda</li>
     </ul>
   </section>
 
   <section>
     <h2>Things I Don't Like</h2>
     <ul>
-      <li>Fill</li>
-      <li>This</li>
-      <li>In</li>
+      <li>Playing games that I don't enjoy</li>
+      <li>Filling this page out</li>
+      <li>Styling without flexbox</li>
     </ul>
   </section>
 </body>
