--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <nav>
     <ul>
       <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
 
   <h1>Welcome To Joshua F. Kinslow's Page</h1>
-
+  <div id="about">
   <section>
     <h2>Things I Like</h2>
     <ul>
@@ -32,5 +32,9 @@
       <li>Styling without flexbox</li>
     </ul>
   </section>
+  </div>
+  <div id="contact">
+    Email: joshua.kinslow@programmer.net
+  </div>
 </body>
 </html>
